# FunctionalSimulator

./: .gitignore  CMakeLists.txt  README.md
examples/: fib.rb
include/: bit_shifts.hpp  cpu.hpp  instruction_formats.hpp  instruction_parser.hpp  interactive_simulator.hpp  memory.hpp  opcodes.hpp  simulator.hpp  syscalls.hpp
src/: cpu.cpp  instruction_parser.cpp  main.cpp  memory.cpp  simulator.cpp
src/dsl/: assembler.rb
src/simulator/: cpu.cpp  instruction_parser.cpp  interactive_simulator.cpp  main.cpp  memory.cpp  simulator.cpp
tests/: cpu_rformat_tests.cpp  instruction_parser_tests.cpp  memory_tests.cpp
